package com.thesis.learnengback;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class LearnengBackApplication {

	public static void main(String[] args) {
		SpringApplication.run(LearnengBackApplication.class, args);
	}

}
