package com.thesis.learnengback.config;

public class CustomException extends RuntimeException {
    public CustomException(String message) {
        super(message);
    }
}
