package com.thesis.learnengback.config;

import org.springframework.context.annotation.Configuration;
import org.springframework.security.config.annotation.web.builders.HttpSecurity;
import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;

@Configuration
@EnableWebSecurity
public class Security extends WebSecurityConfigurerAdapter {

    @Override
    protected void configure(HttpSecurity http) throws Exception {
        http.csrf().disable().authorizeRequests()
                .antMatchers("/register", "/login", "/google/**", "/dashboard/**", "/personal-pronouns-ex/**", "/start-ex/**", "/gradation/**", "/nouns/**", "/tenses/**").permitAll()
                .anyRequest().authenticated();
    }
}
