package com.thesis.learnengback.transport.dto;

public class FlashcardDTO {
}
