package com.thesis.learnengback.transport.dto;


import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;

@Data
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class GradationDTO {

    private String normal;
    private String comparative;
    private String superlative;
}
